--- a/app/templates/890707006.html
+++ b/app/templates/890707006.html
@@ -233,8 +233,8 @@
       </a>
 
       <a href="{{ url_for('bp_890707006.router_universal', modulo='flota') }}" class="card">
-        <div class="card-icon">🚚</div>
-        <div class="card-title">Control Flota</div>
+        <div class="card-icon">📦</div>
+        <div class="card-title">Control Logistico</div>
       </a>
 
     </div>
