--- a/app/templates/890707006_offline.html
+++ b/app/templates/890707006_offline.html
@@ -205,7 +205,7 @@
       <div class="icon-label">Electricidad</div>
     </div>
 
-    <a href="{{ url_for('bp_transporte_carga.dashboard_dinamico', nit='890707006') }}" class="icon-btn"
+    <a href="{{ url_for('flotacarga.home') }}" class="icon-btn"
       style="text-decoration: none; color: inherit;">
       <div class="icon-bg">🚚</div>
       <div class="icon-label">Flota</div>
