--- a/app/templates/B_bodegas.html
+++ b/app/templates/B_bodegas.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BAQ ONE: BODEGAS</title>
 </head>
 <body>
-    PLANTILLA CONTROL TRANSPORTE ESPECIAL
+    
 </body>
 </html>
